force-app/main/default/objects/State_Licensure_zem__c/State_Licensure_zem__c.object-meta.xml
<CustomObject>
    <label>State Licensure</label>
    <nameField>
        <displayFormat>SL-{000000}</displayFormat>
        <label>State Licensure Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licensed States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>