force-app/main/default/objects/State_Licensure_zem__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box is indicative of a Master Agreement in place.</description>
    <label>Agreement</label>
    <type>Checkbox</type>
</CustomField>