force-app/main/default/objects/State_Licensure_zem__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>License Number</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>