force-app/main/default/objects/State_Licensure_zem__c/validationRules/User_Accessibility.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Accessibility</fullName>
    <active>true</active>
    <description>Allows for only Med Ed and BioSkills employees to edit approval</description>
    <errorConditionFormula>OR(and(ischanged(Agreement__c),not(or( $User.Id =  &quot;00580000001pDmt&quot;, $User.Id = &quot;00580000001mA9X&quot;, $User.Id = &quot;00580000003Id02&quot;, $Profile.Id = &quot;00e80000000sptd&quot;, $Profile.Id=&quot;00e80000000t61i&quot;))), AND(ISNEW(), Agreement__c=TRUE, not(or( $User.Id =  &quot;00580000001pDmt&quot;, $User.Id = &quot;00580000001mA9X&quot;, $User.Id = &quot;00580000003Id02&quot;, $Profile.Id = &quot;00e80000000sptd&quot;, $Profile.Id=&quot;00e80000000t61i&quot;))))</errorConditionFormula>
    <errorMessage>You do not have access to update the agreement status.  Please contact the Salesforce.com systems administrator.</errorMessage>
</ValidationRule>