force-app/main/default/objects/State_Licensure_zem__c/listViews/All_Licensed_Physicians_VT.listView-meta.xml
<ListView>
    <fullName>All_Licensed_Physicians_VT</fullName>
    <booleanFilter>1 and 2</booleanFilter>
    <columns>Contact__c</columns>
    <columns>State__c</columns>
    <columns>License_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Agreement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Vermont</value>
    </filters>
    <filters>
        <field>Agreement__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Licensed Physicians-VT</label>
    <language>en_US</language>
</ListView>