force-app/main/default/objects/State_Licensure_zem__c/listViews/Non_Dental_Licensed_Physicians_MA_VT.listView-meta.xml
<ListView>
    <fullName>Non_Dental_Licensed_Physicians_MA_VT</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5</booleanFilter>
    <columns>Contact__c</columns>
    <columns>State__c</columns>
    <columns>License_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Agreement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Massachusetts</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Vermont</value>
    </filters>
    <filters>
        <field>Agreement__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>License_Number__c</field>
        <operation>notContain</operation>
        <value>DL</value>
    </filters>
    <filters>
        <field>Contact__c</field>
        <operation>notContain</operation>
        <value>D.D.S.</value>
    </filters>
    <label>Non-Dental - Licensed Physicians-MA/VT</label>
    <language>en_US</language>
</ListView>